# app

./: .gitignore  README.md  bun.lockb  eslint.config.js  index.html  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build.yml  publish.yml
src/: globals.css  main.tsx  routeTree.gen.ts
src-tauri/: .clippy.toml  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  debug.rs  gamepad.rs  gamepad_event_handler.rs  input_handler.rs  keyboard.rs  lib.rs  log.rs  main.rs  toast.rs  updater.rs  websocket_client.rs
src-tauri/src/commands/: actions.rs  config.rs  connection.rs  control.rs  gamepad.rs  movement.rs  regulator.rs  rov_actions.rs  rov_config.rs  status.rs  thrusters.rs
src-tauri/src/models/: actions.rs  config.rs  debug.rs  gamepad.rs  log.rs  movement.rs  regulator.rs  rov_actions.rs  rov_config.rs  rov_status.rs  rov_telemetry.rs  settings.rs  settings_state.rs  states.rs  status.rs  thrusters.rs  toast.rs
src-tauri/src/websocket/: client.rs  handler.rs  message.rs
src-tauri/src/websocket/receive/: config.rs  debug_firmware.rs  log.rs  log_firmware.rs  ping.rs  regulator.rs  settings.rs  states.rs  status.rs  telemetry.rs  thrusters.rs  toast.rs
src-tauri/src/websocket/send/: actions.rs  config.rs  movement.rs  regulator.rs  thrusters.rs
src/components/: App.tsx  ConnectionStatus.tsx  ControllerLayoutDialog.tsx  ControlsDialog.tsx  GamepadControlsDialog.tsx  InputController.tsx  KeyboardControlsDialog.tsx  KeyboardLayoutDialog.tsx  SettingsDialog.tsx  VideoStream.tsx
src/components/calibration/: IdentifierSelect.tsx  PinSelect.tsx  SpinDirectionSelect.tsx  ThrusterAllocationTable.tsx  ThrusterPinSetupTable.tsx
src/components/composites/: GamepadBindInput.tsx  KeyboardBindInput.tsx  ThrusterRpm.tsx
src/components/controls/: Controls.tsx  RecordingButton.tsx  SettingsButton.tsx  StabilizationButtons.tsx  SystemHealthPopover.tsx
src/components/overlay/: AttitudeIndicator.tsx  BatteryIndicator.tsx  ConnectionStatusIndicator.tsx  DepthIndicator.tsx  Dimensional3DAttitudeIndicator.tsx  (+6 more)
src/hooks/: useConnectionStatusListener.ts  useControlInput.ts  useFirmwareVersionListener.ts  useGamepadListener.ts  useLogListener.ts  useMediaQuery.ts  useMovementCommand.ts  useMovementInput.ts  useRecordingRecovery.ts  useRegulatorSuggestionsListener.ts  useRovConfigListener.ts  useRovStatusUpdateListener.ts  useRovTelemetryListener.ts  useSendActionCommands.ts  useSendDirectionVector.ts  useSendMovementCommand.ts  useSendStateUpdates.ts  useStatus.ts  useToastListener.ts
src/lib/: debug.ts  gamepadListener.ts  log.ts  themeScript.ts  updateListener.ts
src/listeners/: debug.ts  droneConfig.ts  gamepad.ts  log.ts  settings.ts  settingsState.ts  state.ts  states.ts  status.ts  toast.ts  update.ts  webSocketConnection.ts
src/routes/: __root.tsx  index.tsx
src/stores/: config.ts  configStore.ts  connectionStatus.ts  deviceStatusStore.ts  directionVector.ts  droneConfigStore.ts  firmwareVersion.ts  movementCommandStore.ts  movementInputStore.ts  recording.ts  rovConfig.ts  rovStatus.ts  rovTelemetry.ts  settingsStateStore.ts  settingsStore.ts  stateStore.ts  statusStore.ts  websocketConnectionStore.ts
src/styles/: app.css
test-websocket-server/: main.py  pyproject.toml
(+76 files in other folders)
