[package]
name = "cyberfish"
description = "An app for controlling the Cyberfish ROV"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Michael Brusegard"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cyberfish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.1.0"

[dependencies]
tauri = "2.4.0"
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
dirs = "6.0.0"
once_cell = "1.21.3"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
