[package]
name = "manafish"
description = "An app for controlling the Manafish ROV"
version = "0.1.5"
license = "AGPL-3.0-or-later"
authors = ["Michael Brusegard"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manafish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
dirs = "6.0.0"
once_cell = "1.21.3"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
gilrs = "0.11.0"
uuid = "1.17.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.1"
