[package]
name = "manafish-app"
description = "An app for controlling the Manafish ROV"
version = "1.0.0"
license = "AGPL-3.0-or-later"
authors = ["Michael Brusegard"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manafish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
gilrs = "0.11.0"
uuid = "1.18.1"
async-trait = "0.1.89"
ffmpeg-next = { version = "8.0.0", default-features = false, features = [
  "static",
  "format",
  "codec",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
